Added ajax error handling. Added specific case of 403 (Forbidden/token based errors)

--- a/src/components/analyze/aq-analyze-backtest-comparison-dialog.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-dialog.html
@@ -335,6 +335,10 @@
                     this.onComparisonReady();
             },
 
+            onGetBacktestError: function(e) {
+                this.fire('ajax-error', {response: e.detail.request.response});
+            },
+
             onComparisonReady: function() {
             	var compareItems = this.compareItems;
 
