--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -230,7 +230,7 @@
                     //this.currentTab = 0;
                     display_1 = 'none';
                 } else {
-                    this.currentTab = 0;
+                    //this.currentTab = 0;
                     display_2 = 'none';
                 }
 
