--- a/src/components/community/aq-community-create-reply.html
+++ b/src/components/community/aq-community-create-reply.html
@@ -208,6 +208,7 @@
             },
 
             onPostReplyError: function (e) {
+                this.fire('ajax-error', {response: e.detail.request.response});
             },
 
             clearEditor: function () {
