--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -546,7 +546,8 @@
                 }
             },
 
-            onGetStrategiesError: function (data) {
+            onGetStrategiesError: function (e) {
+                this.fire('ajax-error', {response: e.detail.request.response});
             },
 
             openStopDialog: function() {
