Fixed Replies lag Fixed empty reply bug

--- a/src/components/community/aq-community-create-reply.html
+++ b/src/components/community/aq-community-create-reply.html
@@ -236,9 +236,11 @@
                         this.error = "";
                         return true;
                     } else {
+                        this.error = "Empty Reply. Please create a valid reply.";
+                        this.$$('paper-toast').open();
                         return false;
                     }
-                }catch(err){
+                } catch(err){
                     this.$$('paper-toast').open();
                 }
             },
