Sort backtest before comparing (order of selection is not important)

--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -396,6 +396,8 @@
                     checkedItems.splice(checkedItems.map(item => {return item.id;}).indexOf(checkedId),1);
 	        	}
 
+	        	checkedItems.sort((a,b) => {return a.index > b.index ? 1 : -1});
+
         		this.checkedItems = [];
         		this.checkedItems = checkedItems;
 	        	
